# MusicalRecordingCaptioning

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: python-publish.yml
musicalrecordingcaptioning/: align.py  cli.py  config.py  genius.py  srt_writer.py  transcribe.py
