[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musicalrecordingcaptioning"
version = "0.1.1"
description = "Caption musical theater, concerts, or any recording using Genius lyrics and Whisper"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.urls]
GitHub = "https://github.com/athuler/MusicalRecordingCaptioning"
Funding = "https://ko-fi.com/andreithuler"

[project.scripts]
mrc = "musicalrecordingcaptioning.cli:app"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["musicalrecordingcaptioning*"]
